# reprepbuild

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: pypi.yaml  pytest.yaml
src/reprepbuild/: __init__.py  __main__.py  articlezip.py  bibtex.py  command.py  config.py  fancyglob.py  generator.py  helpers.py  latex.py  latexdep.py  latexflat.py  manifest.py  nameglob.py  normalizepdf.py  pythonscript.py  repeat.py  task.py  utils.py  zip.py
src/reprepbuild/builtin/: __init__.py  check_hrefs.py  latex.py  mupdf.py  python_script.py  render.py  shell_script.py  transform.py  zip.py
src/reprepbuild/scripts/: __init__.py  check_hrefs.py  generator.py  latex.py  latex_flat.py  latex_zip.py  manifest.py  markdown_pdf.py  pdf_add_notes.py  pdf_normalize.py  pdf_nup.py  pdf_raster.py  python_script.py  render.py  shell_script.py  zip.py  zip_latex.py  zip_manifest.py  zip_plain.py
tests/: test_check_hrefs.py  test_config.py  test_fancyglob.py  test_generator.py  test_latex.py  test_latex_flat.py  test_mupdf.py  test_nameglob.py  test_pdf.py  test_python_script.py  test_render.py  test_shell_script.py  test_task.py  test_transform.py  test_utils.py  test_zip.py
