[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RepRepBuild"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "Build tool for Reproducible Reporting"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Framework :: Matplotlib",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "attrs",
    "bibsane",
    "jinja2",
    "ninja",
    "numpy",
    "parse",
    "pymupdf",
    "scipy",
    "setuptools",
    "tqdm",
    "watchdog",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/reproducible-reporting/reprepbuild/issues"
Source = "https://github.com/reproducible-reporting/reprepbuild/"
Changelog = "https://github.com/reproducible-reporting/reprepbuild/blob/main/CHANGELOG.md"

[project.scripts]
rr = "reprepbuild.__main__:main"
rrr = "reprepbuild.repeat:main"
rr-zip = "reprepbuild.zip:main"
rr-article-zip = "reprepbuild.articlezip:main"
rr-latexdep = "reprepbuild.latexdep:main"
rr-bibtex = "reprepbuild.bibtex:main"
rr-latex = "reprepbuild.latex:main"
rr-python-script = "reprepbuild.pythonscript:main"
rr-normalize-pdf = "reprepbuild.normalizepdf:main"
rr-manifest = "reprepbuild.manifest:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
line-length = 100
target-version = "py310"
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915", "PLC1901"]

[tool.setuptools_scm]
write_to = "src/reprepbuild/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
